--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -1,17 +1,51 @@
 <!doctype html>
-<style type="text/css">
-	#mainPopup {
-		padding: 10px;
-		height: 200px;
-		width: 400px;
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
-	}
-	h1 {
-		font-size: 2em;
-	}
-</style>
-
+<link rel="stylesheet" href="page_action.css">
 <div id="mainPopup">
-<h1>Battrick Bidder</h1>
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/page_action/page_action.html. The CSS is there, too.</p>
+	<form class="form-labels-on-top" method="post" action="#">
+
+		<div class="form-title-row">
+			<h1>Battrick Bidder</h1>
+		</div>
+
+		<div class="form-row">
+			<label>
+                    <span>Refresh Interval (seconds)</span>
+                    <input type="number" name="refresh" value=60>
+                </label>
+		</div>
+
+		<div class="form-row">
+			<label>
+                    <span>Max bid price (£)</span>
+                    <input type="number" name="max">
+                </label>
+		</div>
+
+		<!--<div class="form-row">
+			<label>
+                    <span>Dropdown</span>
+                    <select name="dropdown">
+                        <option>Option One</option>
+                        <option>Option Two</option>
+                        <option>Option Three</option>
+                        <option>Option Four</option>
+                    </select>
+                </label>
+		</div>-->
+
+		<div class="form-row">
+			<label>
+                    <span>Checkbox</span>
+                    <input type="checkbox" name="checkbox" checked>
+                </label>
+		</div>
+
+		<div class="form-row">
+			<button id='buttonEnable' type="button" class='enable'>Enable</button>
+			<button id='buttonDisable' type="button" class='disable'>Disable</button>
+		</div>
+
+	</form>
 </div>
+
+<script src="page_action.js"></script>
