Fixed message passing

--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -10,14 +10,14 @@
 		<div class="form-row">
 			<label>
                     <span>Refresh Interval (seconds)</span>
-                    <input type="number" name="refresh" value=60>
+                    <input id="refresh" type="number" name="refresh" value=60>
                 </label>
 		</div>
 
 		<div class="form-row">
 			<label>
                     <span>Max bid price (£)</span>
-                    <input type="number" name="max">
+                    <input id="max" type="number" name="max">
                 </label>
 		</div>
 
