--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -6,7 +6,7 @@
 		<div class="form-title-row">
 			<h1>Battrick Bidder</h1>
 		</div>
-
+		<img id="running-indicator" src="gears.gif" alt="running">
 		<div class="form-row">
 			<label>
                     <span>Refresh Interval (seconds)</span>
@@ -33,12 +33,12 @@
                 </label>
 		</div>-->
 
-		<div class="form-row">
+		<!--<div class="form-row">
 			<label>
                     <span>Checkbox</span>
                     <input type="checkbox" name="checkbox" checked>
                 </label>
-		</div>
+		</div>-->
 
 		<div class="form-row">
 			<button id='buttonEnable' type="button" class='enable'>Enable</button>
