Added refresh and auto-bid code

--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -17,7 +17,7 @@
 		<div class="form-row">
 			<label>
                     <span>Max bid price (£)</span>
-                    <input id="max" type="number" name="max">
+                    <input id="max" type="number" name="max" value=1000>
                 </label>
 		</div>
 
